sql/test/error/error8.exp


select * from t1 union select * from t2;
       ^
       |
        ----- ERROR
Error: line 4, characters 8-8:
Incompatible select width for union
